Separate builder for use during server sartup

--- a/bin/control
+++ b/bin/control
@@ -34,18 +34,7 @@ function tidy() {
 
 function build() {
     "${OPENSHIFT_OCAML_CORE_DIR}bin/build-compiler"
-    ( cd "${OPENSHIFT_REPO_DIR}"
-        eval $( opam config env )
-        if [ -f _oasis ]; then
-            oasis setup
-        fi
-        declare pkgname=$( sed -n 's/name:\s*"\?\([^"]*\)"\?/\1/p' opam | head -1 )
-        if [ -d "${OPAMROOT}/${OCAMLVERSION}/packages.dev/${pkgname}" ]; then
-            opam upgrade "${pkgname}" -y |& tee -a "${logfile}"
-        else
-            opam pin add "${pkgname}" . -y |& tee -a "${logfile}"
-        fi
-    )
+    client_message "Building may take very long, so it has been moved to start hook."
 }
 
 function ignore_hook() {
